# Diff-checker-AI-Fun

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: agent.py  main.py  models.py  tools.py  utils.py
app/middleware/: rate_limit.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: DiffCategory.jsx  DiffInput.jsx  DiffResults.jsx  ErrorAlert.jsx  Header.jsx  LoadingSpinner.jsx
