[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-diff-checker"
version = "1.0.0"
description = "Minimal LangChain Agent with Tools - FastAPI Boilerplate"
requires-python = ">=3.11"
dependencies = [
    # Core API Framework
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic>=2.12.5",
    # LangChain & LangGraph
    "langchain==1.2.10",
    "langgraph==1.0.10",
    # Model Providers
    "langchain-openai==1.1.10",
    "langchain-anthropic==1.3.4",
    "langchain-google-genai==4.2.1",
    "langchain-google-vertexai==3.2.2",
    # Additional utilities
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "truststore>=0.10,<1",
]

[project.optional-dependencies]
aws = ["langchain-aws"]
mistral = ["langchain-mistralai"]
groq = ["langchain-groq"]
cohere = ["langchain-cohere"]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["app"]
